cleanup deprecated, warning. fix thread leak
cleanup deprecated, warning. fix thread leak: PeriodicReloadingTrigger